--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -32,11 +32,11 @@
                     </div>
                     <div class="input-box">
                         <span class="details">Password</span>
-                        <input type="text" placeholder="Enter your password" name="password" required>
+                        <input type="password" placeholder="Enter your password" name="password" required>
                     </div>
                     <div class="input-box">
                         <span class="details">Confirm Password</span>
-                        <input type="text" placeholder="Confirm your password" name="confirmPassword" required>
+                        <input type="password" placeholder="Confirm your password" name="confirmPassword" required>
                     </div>
                 </div>
                 <div class="gender-details">
